[tool.poetry]
name = "esque"
version = "0.1.4a"
description="esque - an operational kafka tool."
authors = ["real.digital <opensource@real-digital.de>"]
license = "MIT"
readme = "README.md"
exclude = ["tests/**/*"]

repository = "https://github.com/real.digital/esque"

keywords = ["kafka", "dependency", "poetry"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7"
  ]
# esque entrypoint
[tool.poetry.scripts]
esque = "esque.cli.commands:esque"

# Dependencies
[tool.poetry.dependencies]
python = "^3.6"

avro-python3 = "=1.8.2"
click = "^7.0"
confluent-kafka = "^1.2"
fastavro = "^0.22.5"
pendulum = "^2.0"
pykafka = "^2.8"
pyyaml = "^5.1"
requests = "^2.22"

# Dev Dependencies
[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^1.11"
pytest-cov = "^2.8"
flake8 = "^3.7"
black = {version = "*", allows-prereleases = true}

[tool.black]
line-length = 119
target_version = ['py36']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

