[tool.poetry]
name = "esque"
version = "0.5.2"
description="esque - an operational kafka tool."
authors = ["real.digital <opensource@real-digital.de>"]
license = "MIT"
readme = "README.md"
include = [
  "esque/config/sample_config.yaml",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "esque/validation/schemas/*.yaml"
  ]

exclude = ["tests/**/*"]

repository = "https://github.com/real-digital/esque"

keywords = ["kafka", "cli", "commandline", "administration", "operation"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
  ]
# esque entrypoint
[tool.poetry.scripts]
esque = "esque.cli.commands:esque"

# Dependencies
[tool.poetry.dependencies]
python = ">=3.8,<3.11"

avro-python3 = "^1.9"
click = "8.1.3"
confluent-kafka = {version = "^1.6", extras = ["avro"]}
fastavro = "^1.0"
pendulum = "^2.0"
kafka-python = "^2.0.2"
pyyaml = "^5.1"
requests = "^2.22"
yamale = ">=2,<4"
toml = "^0.10.0"
more-itertools = "^8.10.0"

# Dev Dependencies
[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^1.11"
pytest-cov = "^2.8"
flake8 = "^3.7"
black = {version = "22.6.0", allow-prereleases = true}
isort = {version = "^4.3", extras = ["pyproject"]}
bandit = "^1.6.2"
coveralls = "^1.8.2"
pytest-cases = "^3.6.4"

[tool.black]
line-length = 119
target_version = ['py36']
include = '\.pyi?$'

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
known_first_party = ["esque", "tests"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
